--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.13.3",
-    "serve-favicon": "^2.3.0",
-    "morgan": "^1.6.1",
-    "cookie-parser": "^1.3.3",
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
-    "method-override": "^2.3.0",
+    "cookie-parser": "^1.3.3",
+    "ejs": "^2.3.1",
+    "express": "^4.13.3",
     "glob": "^6.0.4",
+    "jquery": "^3.1.1",
+    "method-override": "^2.3.0",
     "mongoose": "^4.1.2",
-    "ejs": "^2.3.1"
+    "morgan": "^1.6.1",
+    "request": "^2.76.0",
+    "serve-favicon": "^2.3.0",
+    "webcamjs": "^1.0.16"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
