--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "^1.6.1",
     "request": "^2.76.0",
     "serve-favicon": "^2.3.0",
+    "svg.js": "^2.3.6",
     "webcamjs": "^1.0.16"
   },
   "devDependencies": {
